Production Beta Test

--- a/src/main/webapp/app/entities/contacts/contacts-add-similar.html
+++ b/src/main/webapp/app/entities/contacts/contacts-add-similar.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-
+    <input type="hidden" ng-model="vm.contactDTO.contacts.id" ng-init="vm.contactDTO.contacts.id = null">
 
     <div class="row">
         <div class="form-group">
