--- a/src/main/webapp/app/entities/contacts/contacts-detail.html
+++ b/src/main/webapp/app/entities/contacts/contacts-detail.html
@@ -10,7 +10,7 @@
                         ui-sref="contacts.edit({id:vm.contactDTO.contacts.id})">Edit
                 </button>
                 <button type="submit"
-                        ui-sref="contacts.edit({id:vm.contactDTO.contacts.id})"
+                        ui-sref="contacts.similar({id:vm.contactDTO.contacts.id})"
                         class="btn btn-xs btn btn-primary">Add Similar
                 </button>
                 <button type="button" onclick="window.history.back()"
