--- a/src/main/webapp/app/entities/project-roles/project-roles-dialog.html
+++ b/src/main/webapp/app/entities/project-roles/project-roles-dialog.html
@@ -384,7 +384,7 @@
         <button type="button" class="btn btn-default btn-sm" data-dismiss="modal" ng-click="vm.clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;Cancel
         </button>
-        <button type="submit" ng-disabled="editForm.$invalid || isSaving" class="btn btn-primary btn-sm">
+        <button type="submit"  class="btn btn-primary btn-sm">
             <span class="glyphicon glyphicon-save"></span>&nbsp;Save
         </button>
     </div>
