--- a/src/main/webapp/app/entities/projects/projects.html
+++ b/src/main/webapp/app/entities/projects/projects.html
@@ -1,6 +1,6 @@
 <div>
     <h3 translate="smartLpcApp.projects.home.title" align="center">Projects</h3>
-    <jhi-alert></jhi-alert>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
@@ -103,12 +103,12 @@
                             <span class="glyphicon glyphicon-pencil"></span>
                             <!--<span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>-->
                         </button>
-                        <button type="button"
+                        <!--<button type="button"
                                 ng-click="vm.delete(projects.projects.id)"
                                 class="btn btn-danger btn-sm">
                             <span class="glyphicon glyphicon-remove-circle"></span>
-                            <!--<span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>-->
-                        </button>
+                            &lt;!&ndash;<span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>&ndash;&gt;
+                        </button>-->
                     </div>
                 </td>
             </tr>
