--- a/src/main/webapp/app/entities/projects/rename.html
+++ b/src/main/webapp/app/entities/projects/rename.html
@@ -10,12 +10,12 @@
     </div>
 </div>
 <div class="modal-body">
-       
+
             <h5 class="small">Project Name:<b>{{vm.proj.name}}</b></h5>
             <h5 class="small">Full_Name/New_Name:<b>{{vm.proj.fullName}}</b></h5>
             <h5 class="small">Old Alfresco Title 1:<b>{{vm.proj.alfrescoTitle1}}</b></h5>
             <h5 class="small">Old Alfresco Title 2:<b>{{vm.proj.alfrescoTitle2}}</b></h5>
-            <h5 class="small">New Alfresco Title 1:<input type="text" class="input-xs" ng-model="title1"></h5>
-            <h5 class="small">New Alfresco Title 2:<input type="text" class="input-xs" ng-model="title2"></h5>
-                
+            <h5 class="small">New Alfresco Title 1:<input type="text" class="input-xs" ng-model="title1" ng-change="vm.validate()"><div ng-if="flag===true"><span class="text-danger">No Spaces Allowed</span> </div></h5>
+            <h5 class="small">New Alfresco Title 2:<input type="text" class="input-xs" ng-model="title2" ng-change="vm.validate()"><div ng-if="flag===true"><span class="text-danger">No Spaces Allowed</span> </div></h5>
+
 </div>
