--- a/src/main/webapp/app/entities/projects/select-album.html
+++ b/src/main/webapp/app/entities/projects/select-album.html
@@ -29,7 +29,7 @@
             <td class="text-right small">
                 <div class="btn-group flex-btn-group-container">
 
-                    <button type="button" class="btn btn-primary btn-xs" ng-click="vm.selectAlbum($index)">
+                    <button type="button" class="btn btn-primary btn-xs" ng-click="vm.selectAlbum(tags.id)">
                         <span class="glyphicon glyphicon-check"></span> &nbsp; Select
                     </button>
                 </div>
