--- a/src/main/webapp/app/entities/work-order/work-order-detail.html
+++ b/src/main/webapp/app/entities/work-order/work-order-detail.html
@@ -2,7 +2,7 @@
     <div print-remove>
         <div class="row pull-right">
             <button type="submit" class="btn btn-xs btn btn-primary"
-                    ui-sref="work-order.edit({id:workOrderDTO.workOrder.id})">
+                    ui-sref="work-order.edit({id:vm.workOrderDTO.workOrder.id})">
                 Edit
             </button>
 
