--- a/src/main/webapp/app/entities/work-order/work-order-invoice.html
+++ b/src/main/webapp/app/entities/work-order/work-order-invoice.html
@@ -37,23 +37,21 @@
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
 
-                <th jh-sort-by="id" class="extra-small">ID <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="requestDate" class="extra-small">Project Name<span class="glyphicon glyphicon-sort"></span>
+                <th jh-sort-by="id" class="extra-small">ID </th>
+                <th jh-sort-by="requestDate" class="extra-small">Project Name
                 </th>
-                <th jh-sort-by="requestDescription" class="extra-small">PO#<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="poRecord" class="extra-small">Date <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="extra-small">Type <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="extra-small">PKO <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="durationOfService" class="extra-small">Work Description<span
-                    class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="type.textValue" class="extra-small">Status<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="status.textValue" class="extra-small">Time(Hours)<span
-                    class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="requestDescription" class="extra-small">PO#</th>
+                <th jh-sort-by="poRecord" class="extra-small">Date </th>
+                <th jh-sort-by="invoiced" class="extra-small">Type </th>
+                <th jh-sort-by="invoiced" class="extra-small">PKO </th>
+                <th jh-sort-by="durationOfService" class="extra-small">Work Description</th>
+                <th jh-sort-by="type.textValue" class="extra-small">Status</th>
+                <th jh-sort-by="status.textValue" class="extra-small">Time(Hours)</th>
 
-                <th jh-sort-by="project.name" class="extra-small">Assigned To <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="extra-small">Audited <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="extra-small">Audited By <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="extra-small">Invoiced <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="project.name" class="extra-small">Assigned To </th>
+                <th jh-sort-by="project.name" class="extra-small">Audited </th>
+                <th jh-sort-by="project.name" class="extra-small">Audited By </th>
+                <th jh-sort-by="project.name" class="extra-small">Invoiced </th>
                 <th></th>
             </tr>
             </thead>
