--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -289,6 +289,7 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/projects/projects.search.service.js"></script>
 	<script src="app/entities/projects/projects.controller.js"></script>
 	<script src="app/entities/projects/pro.controller.js"></script>
+	<script src="app/entities/projects/pro.service.js"></script>
 	<script src="app/entities/projects/projects-template.controller.js"></script>
 	<script src="app/entities/projects/projects-multiple.controller.js"></script>
 	<script src="app/entities/projects/projects-dialog.controller.js"></script>
@@ -385,6 +386,8 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/projects/select-actor.controller.js"></script>
 
 	<script src="app/entities/contacts/contacts-update.controller.js"></script>
+	<script src="app/entities/contacts/contacts-add-similar.controller.js"></script>
+
 	<script src="app/entities/contacts/projectsList-controller.js"></script>
 	<script src="app/entities/work-order/work-order-invoice-controller.js"></script>
 
@@ -402,6 +405,7 @@ Latest compiled and minified JavaScript
 	<script
 		src="app/entities/contacts/contacts-delete-dialog.controller.js"></script>
 	<script src="app/entities/contacts/contacts-add.controller.js"></script>
+	<script src="app/entities/contacts/contacts-add-modal.controller.js"></script>
 	<script
 		src="app/entities/contact-relationships/contact-relationships.state.js"></script>
 	<script
