--- a/src/main/webapp/app/entities/contacts/project-permission.html
+++ b/src/main/webapp/app/entities/contacts/project-permission.html
@@ -1,5 +1,5 @@
 <div class="container-full">
-    <h4 class="" align="center">Project Permission</h4>
+    <h3 class="" align="center"><strong>Project(s) Permission(s)</strong></h3>
     <div class="row">
         <div class="col-sm-4"><h5><strong>{{vm.contactDTO.contacts.fullName}}</strong></h5></div>
         <div class="col-sm-3 pull-right">
