--- a/src/main/webapp/app/entities/contacts/simpleModal.html
+++ b/src/main/webapp/app/entities/contacts/simpleModal.html
@@ -185,7 +185,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-4 no-padding-left">
-				<button class="btn btn-primary btn-sm" ui-sref="contacts.add">
+				<button class="btn btn-primary btn-sm" ng-click="vm.addContact()">
 					<span class="glyphicon glyphicon-plus"></span> <span
 						class="hidden-xs"
 						translate="smartLpcApp.contacts.home.createLabel"> Create
@@ -207,7 +207,7 @@
 							</button>
 						</span> <span class="input-group-btn width-min" ng-if="vm.currentSearch">
 							<button class="btn btn-info btn-sm" ng-click="vm.clear()">
-								<span class="glyphicon glyphicon-trash"></span>
+								<span class="glyphicon glyphicon-remove"></span>
 							</button>
 						</span>
 					</div>
