--- a/src/main/webapp/app/entities/search/search-dialog.html
+++ b/src/main/webapp/app/entities/search/search-dialog.html
@@ -1,23 +1,37 @@
-<!--<div class="modal-header">
+<div class="modal-header">
 
-</div>-->
-<form name="editForm" role="form" novalidate ng-submit="vm.save()">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
+            ng-click="vm.clear()">&times;
+    </button>
+</div>
 
-    <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+
+<div class="modal-body">
+    <jhi-alert-error></jhi-alert-error>
+    <form name="editForm" role="form">
+
         <h4>Search <strong>Projects/Contacts</strong></h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-                ng-click="vm.clear()">&times;</button>
+
+
         <h4 class="modal-title"></h4>
 
         <div class="row">
+            <div class="col-xs-4">
+                <select class="form-control input-sm" ng-model="vm.typeCP" ng-init="vm.typeCP = vm.contactsProjectFilter[0]"
+                        ng-options="filter.name for filter in vm.contactsProjectFilter" ></select>
+            </div>
             <div class="col-xs-5">
 
                 <input id="search.query" name="textinput" type="text" placeholder="Search By Name"
                        class="form-control input-sm" ng-model="vm.search.query">
 
             </div>
-            <div class="btn-group" data-toggle="buttons">
+            <div class="col-xs-2">
+                <button type="submit" class="btn btn-primary btn-sm" ng-click="vm.contactProjectSearch(vm.typeCP,vm.search.query)">
+                    <span class="glyphicon glyphicon-search"></span>&nbsp; Search
+                </button>
+            </div>
+          <!--  <div class="btn-group" data-toggle="buttons">
 
                 <button type="button" class="btn btn-success active btn-sm"
                         ng-click="vm.searchContacts(vm.search.query)">Contact
@@ -30,52 +44,53 @@
                 </button>
 
 
-            </div>
+            </div>-->
         </div>
+    </form>
+    <!-- <div class="row">
+         <div class="col-xs-5">
 
-       <!-- <div class="row">
-            <div class="col-xs-5">
+             <input id="textinput" name="textinput" type="text" placeholder="Additional Filter"
+                    class="form-control input-sm" ng-model="vm.search.filter">
 
-                <input id="textinput" name="textinput" type="text" placeholder="Additional Filter"
-                       class="form-control input-sm" ng-model="vm.search.filter">
-
-            </div>
-        </div>-->
-        <hr>
-
+         </div>
+     </div>-->
+    <hr>
+    <form name="editForm" role="form" novalidate>
         <h4>Search <strong>Work Order Report</strong></h4>
 
         <div class="row">
             <div class="col-xs-4">
-                <select class="form-control input-sm" ng-model="vm.type" ng-options="filter.name for filter in vm.workOrderFilter"></select>
-               <!-- <select class="form-control input-sm" id="sel1">
-                    <option>Project Name</option>
-                    <option>Work Order ID</option>
-                    <option>PO Record</option>
-                    <option>Requestor Name</option>
-                    <option>Work Description</option>
-                    <option>Invoice</option>
-                </select>-->
+                <select class="form-control input-sm" ng-model="vm.type" ng-init="vm.type = vm.workOrderFilter[0]"
+                        ng-options="filter.name for filter in vm.workOrderFilter"></select>
+                <!-- <select class="form-control input-sm" id="sel1">
+                     <option>Project Name</option>
+                     <option>Work Order ID</option>
+                     <option>PO Record</option>
+                     <option>Requestor Name</option>
+                     <option>Work Description</option>
+                     <option>Invoice</option>
+                 </select>-->
 
 
             </div>
             <div class="col-xs-5">
                 <input name="textinput" type="text" class="form-control input-sm" ng-model="vm.search.query1">
             </div>
-        </div>
-        <br>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-sm" data-dismiss="modal" ng-click="vm.clear()">
-                <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span
-                translate="entity.action.cancel">Cancel</span>
-            </button>
+            <div class="col-xs-2">
+                <button type="submit"
+                        ng-click="vm.searchWorkOrder(vm.search.query1)"
+                        ng-disabled="editForm.$invalid || isSaving"
+                        class="btn btn-primary btn-sm">
+                    <span class="glyphicon glyphicon-search"></span>&nbsp; Search
+                </button>
+            </div>
 
-            <button type="button"
-                    ng-click="vm.searchWorkOrder(vm.search.query1)"
-                    ng-disabled="editForm.$invalid || isSaving"
-                    class="btn btn-primary btn-sm">
-                <span class="glyphicon glyphicon-search"></span>&nbsp; Search
-            </button>
         </div>
+    </form>
+    <br>
+    <div class="modal-footer">
+
     </div>
+</div>
 </form>
