--- a/src/main/webapp/app/entities/work-order/work-order-included-comp.html
+++ b/src/main/webapp/app/entities/work-order/work-order-included-comp.html
@@ -37,31 +37,26 @@
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
 
-                <th jh-sort-by="id" class="extra-small"><span translate="global.field.id">ID</span> <span
-                    class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="id" class="extra-small"><span translate="global.field.id">ID</span> </th>
+                <th jh-sort-by="id" class="extra-small">Project Name </th>
+
                 <th jh-sort-by="requestDate" class="extra-small"><span translate="smartLpcApp.workOrder.requestDate">RequestDate</span>
-                    <span class="glyphicon glyphicon-sort"></span></th>
+                    </th>
                 <th jh-sort-by="requestDescription" class="extra-small"><span translate="smartLpcApp.workOrder.requestDescription">RequestDescription</span>
-                    <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="poRecord" class="extra-small"><span translate="smartLpcApp.workOrder.poRecord">PoRecord</span> <span
-                    class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="extra-small"><span translate="smartLpcApp.workOrder.invoiced">Invoiced</span> <span
-                    class="glyphicon glyphicon-sort"></span></th>
+                    </th>
+                <th jh-sort-by="poRecord" class="extra-small"><span translate="smartLpcApp.workOrder.poRecord">PoRecord</span> </th>
+                <th jh-sort-by="invoiced" class="extra-small"><span translate="smartLpcApp.workOrder.invoiced">Invoiced</span> </th>
 
                 <th jh-sort-by="durationOfService" class="extra-small"><span translate="smartLpcApp.workOrder.durationOfService">DurationOfService</span>
-                    <span class="glyphicon glyphicon-sort"></span></th>
+                    </th>
 
-                <th jh-sort-by="type.textValue" class="extra-small"><span translate="smartLpcApp.workOrder.type">type</span> <span
-                    class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="type.textValue" class="extra-small"><span translate="smartLpcApp.workOrder.type">type</span> </th>
 
-                <th jh-sort-by="status.textValue" class="extra-small"><span translate="smartLpcApp.workOrder.status">status</span> <span
-                    class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="status.textValue" class="extra-small"><span translate="smartLpcApp.workOrder.status">status</span> </th>
 
-                <th jh-sort-by="project.name" class="extra-small"><span translate="smartLpcApp.workOrder.project">project</span> <span
-                    class="glyphicon glyphicon-sort"></span></th>
 
                 <th jh-sort-by="assignedToUser.firstName" class="extra-small"><span translate="smartLpcApp.workOrder.assignedToUser">assignedToUser</span>
-                    <span class="glyphicon glyphicon-sort"></span></th>
+                    </th>
 
                 <th></th>
             </tr>
@@ -77,21 +72,21 @@
                 }">
 
 
+
                 <td class="col-xs-1 extra-small">
-                    <div ng-if="workOrder.id != HIDE">
-                        <a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a>
-                    </div>
+
+                    <a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a>
                 </td>
                 <td class="col-xs-2 extra-small">
-                    <div ng-if="workOrder.id == HIDE">
+                    <div ng-if="workOrder.po == 'HIDE'">
                         <strong>{{workOrder.project_name}}</strong>
                     </div>
-                    <div ng-if="workOrder.id != HIDE">
+                    <div ng-if="workOrder.po != 'HIDE'">
                         {{workOrder.project_name}}
                     </div>
                 </td>
                 <td class="col-xs-1 extra-small">
-                    <div ng-if="workOrder.id != HIDE">
+                    <div ng-if="workOrder.po != 'HIDE'">
                         {{workOrder.po}}
                     </div>
                 </td>
@@ -104,7 +99,7 @@
 
 
                 <td class="text-right extra-small">
-                    <div ng-if="workOrder.id != HIDE">
+                    <div ng-if="workOrder.po != 'HIDE'">
 
 
                         <div class="btn-group flex-btn-group-container">
@@ -118,11 +113,6 @@
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
 
-                            </button>
-                            <button type="submit"
-                                    ui-sref="work-order.delete({id:workOrder.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
                             </button>
                         </div>
                     </div>
