--- a/src/main/webapp/app/entities/work-order/work-order-processing-log.html
+++ b/src/main/webapp/app/entities/work-order/work-order-processing-log.html
@@ -41,46 +41,26 @@
 
 
 
-					<th jh-sort-by="id" class="extra-small"><span
-						translate="global.field.id">ID</span> <span
-						class="glyphicon glyphicon-sort"></span></th>
+					<th jh-sort-by="id" class="extra-small"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','1')" ></span></th>
 
-					<th jh-sort-by="project.name" class="extra-small">Project<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Date Recieved<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">HDD ID<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Proofs Shipped<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Drive Shipped<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Image Range<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Image Qty.<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Pages 1<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Pages 2<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Notes<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Location<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">PKO<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Status<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Audited<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Assigned To<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Processed By<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Ingested By<span
-						class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small">Completion Date<span
-						class="glyphicon glyphicon-sort"></span></th>
+					<th jh-sort-by="project.name" class="extra-small">Project<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','2')"></span></th>
+					<th class="extra-small">Date Recieved<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','2')"></span></th>
+					<th class="extra-small">HDD ID<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','3')"></span></th>
+					<th class="extra-small">Proofs Shipped<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','4')"></span></th>
+					<th class="extra-small">Drive Shipped<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','5')"></span></th>
+					<th class="extra-small">Image Range<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','6')"></span></th>
+					<th class="extra-small">Image Qty.<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','7')"></span></th>
+					<th class="extra-small">Pages 1<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','8')"></span></th>
+					<th class="extra-small">Pages 2<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','9')"></span></th>
+					<th class="extra-small">Notes<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','10')"></span></th>
+					<th class="extra-small">Location<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','11')"></span></th>
+					<th class="extra-small">PKO<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','12')"></span></th>
+					<th class="extra-small">Status<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','13')"></span></th>
+					<th class="extra-small">Audited<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','14')"></span></th>
+					<th class="extra-small">Assigned To<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','15')"></span></th>
+					<th class="extra-small">Processed By<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','16')"></span></th>
+					<th class="extra-small">Ingested By<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','17')"></span></th>
+					<th class="extra-small">Completion Date<span class="glyphicon glyphicon-sort" ng-click="vm.sort('DESC','18')"></span></th>
 					<th></th>
 				</tr>
 			</thead>
