--- a/src/main/webapp/app/entities/work-order/work-order-update.html
+++ b/src/main/webapp/app/entities/work-order/work-order-update.html
@@ -3,15 +3,11 @@
 
 <div class="row">
     <button type="button" class="btn btn-xs btn btn-primary" ng-click="vm.save()">Save</button>
-    <button type="button" class="btn btn-xs btn btn-primary">Save
-        and Close
+    <button type="button" class="btn btn-xs btn btn-primary" ng-click="vm.saveAndClose()">Save and Close</button>
+    <button type="button" class="btn btn-xs btn btn-danger" ng-click="vm.delete(vm.workOrderDTO.workOrder.id)">Delete
     </button>
-    <button type="button" class="btn btn-xs btn btn-primary">Save
-        and Add
-    </button>
-    <button type="button"
-            onclick="window.history.back()" class="btn btn-xs btn btn-danger">Cancel
-    </button>
+    <a type="button" ui-sref="work-order" class="btn btn-xs btn btn-danger">Close</a>
+
 
 </div>
 <br>
@@ -27,7 +23,8 @@
             &nbspProof &nbsp</label>
         <label class="small"><input type="checkbox" ng-model="vm.workOrderDTO.workOrder.isAbc">
             &nbspABC &nbsp</label>
-        <label class="small"><input type="checkbox" ng-click="vm.trackingCheck()" ng-model="vm.workOrderDTO.workOrder.isTracking">
+        <label class="small"><input type="checkbox" ng-click="vm.trackingCheck()"
+                                    ng-model="vm.workOrderDTO.workOrder.isTracking">
             &nbspTracking &nbsp</label>
     </div>
 </div>
@@ -223,20 +220,24 @@
 
         <div class="col-sm-2">
 
-           <!-- <select class="form-control input-sm" id="field_vm.adminRelationDTOs[0].admin_user"
-                    name="assignedToUser"
-                    ng-model="vm.workOrderDTO.workOrdersAdminRelations[5].admin_user"
-                    ng-options="user as user.fullName for user in vm.users track by user.id">
-                <option value=""></option>
-            </select>
--->     <ui-select multiple ng-model="vm.selecteddueMountReminder"
-              theme="bootstrap" ng-disabled="ctrl.disabled"
-              close-on-select="false" style="width: 200px;"
-              title="Choose a color"> <ui-select-match
-            placeholder="Select reminder to...">{{$item.admin_user.fullName}}</ui-select-match>
-            <ui-select-choices
-                repeat="admin in vm.dueMountReminder | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
-        </ui-select>
+            <!-- <select class="form-control input-sm" id="field_vm.adminRelationDTOs[0].admin_user"
+                     name="assignedToUser"
+                     ng-model="vm.workOrderDTO.workOrdersAdminRelations[5].admin_user"
+                     ng-options="user as user.fullName for user in vm.users track by user.id">
+                 <option value=""></option>
+             </select>
+ -->
+            <ui-select multiple ng-model="vm.selecteddueMountReminder"
+                       theme="bootstrap" ng-disabled="ctrl.disabled"
+                       close-on-select="false" style="width: 200px;"
+                       title="Choose a color">
+                <ui-select-match
+                    placeholder="Select reminder to...">{{$item.admin_user.fullName}}
+                </ui-select-match>
+                <ui-select-choices
+                    repeat="admin in vm.dueMountReminder | filter:$select.search">{{admin.admin_user.fullName}}
+                </ui-select-choices>
+            </ui-select>
 
         </div>
     </div>
@@ -251,19 +252,22 @@
                    class="form-control input-sm" ng-model="vm.workOrderDTO.workOrder.reminderMsg2">
         </div>
         <div class="col-sm-2">
-           <!-- <select class="form-control input-sm" id="field_vm.adminRelationDTOs[1].admin_user"
-                    name="assignedToUser"
-                    ng-model="vm.workOrderDTO.workOrdersAdminRelations[6].admin_user"
-                    ng-options="user as user.fullName for user in vm.users track by user.id">
-                <option value=""></option>
-            </select>-->
+            <!-- <select class="form-control input-sm" id="field_vm.adminRelationDTOs[1].admin_user"
+                     name="assignedToUser"
+                     ng-model="vm.workOrderDTO.workOrdersAdminRelations[6].admin_user"
+                     ng-options="user as user.fullName for user in vm.users track by user.id">
+                 <option value=""></option>
+             </select>-->
             <ui-select multiple ng-model="vm.selectedclientReminder"
                        theme="bootstrap" ng-disabled="ctrl.disabled"
                        close-on-select="false" style="width: 200px;"
-                       title="Choose a color"> <ui-select-match
-                placeholder="Select reminder to...">{{$item.admin_user.fullName}}</ui-select-match>
+                       title="Choose a color">
+                <ui-select-match
+                    placeholder="Select reminder to...">{{$item.admin_user.fullName}}
+                </ui-select-match>
                 <ui-select-choices
-                    repeat="admin in vm.clientReminder | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                    repeat="admin in vm.clientReminder | filter:$select.search">{{admin.admin_user.fullName}}
+                </ui-select-choices>
             </ui-select>
         </div>
     </div>
@@ -288,10 +292,13 @@
             <ui-select multiple ng-model="vm.selectedtoMountReminder"
                        theme="bootstrap" ng-disabled="ctrl.disabled"
                        close-on-select="false" style="width: 200px;"
-                       title="Choose a color"> <ui-select-match
-                placeholder="Select reminder to...">{{$item.admin_user.fullName}}</ui-select-match>
+                       title="Choose a color">
+                <ui-select-match
+                    placeholder="Select reminder to...">{{$item.admin_user.fullName}}
+                </ui-select-match>
                 <ui-select-choices
-                    repeat="admin in vm.toMountReminder | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                    repeat="admin in vm.toMountReminder | filter:$select.search">{{admin.admin_user.fullName}}
+                </ui-select-choices>
             </ui-select>
         </div>
     </div>
@@ -309,7 +316,8 @@
                    close-on-select="false" style="width: 200px;" title="Choose a color">
             <ui-select-match placeholder="Select verified by...">{{$item.admin_user.fullName}}</ui-select-match>
             <ui-select-choices
-                repeat="admin in vm.verifiedBy | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                repeat="admin in vm.verifiedBy | filter:$select.search">{{admin.admin_user.fullName}}
+            </ui-select-choices>
         </ui-select>
 
     </div>
@@ -322,7 +330,8 @@
                    close-on-select="false" style="width: 200px;" title="Choose a color">
             <ui-select-match placeholder="Select processed by...">{{$item.admin_user.fullName}}</ui-select-match>
             <ui-select-choices
-                repeat="admin in vm.processedBy | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                repeat="admin in vm.processedBy | filter:$select.search">{{admin.admin_user.fullName}}
+            </ui-select-choices>
         </ui-select>
     </div>
 
@@ -332,10 +341,13 @@
 
         <ui-select multiple ng-model="vm.selectedingestBy" theme="bootstrap"
                    ng-disabled="ctrl.disabled" close-on-select="false"
-                   style="width: 200px;" title="Choose a color"> <ui-select-match
-            placeholder="Select ingest by...">{{$item.admin_user.fullName}}</ui-select-match>
+                   style="width: 200px;" title="Choose a color">
+            <ui-select-match
+                placeholder="Select ingest by...">{{$item.admin_user.fullName}}
+            </ui-select-match>
             <ui-select-choices
-                repeat="admin in vm.ingestBy | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                repeat="admin in vm.ingestBy | filter:$select.search">{{admin.admin_user.fullName}}
+            </ui-select-choices>
         </ui-select>
     </div>
 </div>
@@ -346,10 +358,13 @@
 
         <ui-select multiple ng-model="vm.selectedprintBy" theme="bootstrap"
                    ng-disabled="ctrl.disabled" close-on-select="false"
-                   style="width: 200px;" title="Choose a color"> <ui-select-match
-            placeholder="Select print by...">{{$item.admin_user.fullName}}</ui-select-match>
+                   style="width: 200px;" title="Choose a color">
+            <ui-select-match
+                placeholder="Select print by...">{{$item.admin_user.fullName}}
+            </ui-select-match>
             <ui-select-choices
-                repeat="admin in vm.printBy | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                repeat="admin in vm.printBy | filter:$select.search">{{admin.admin_user.fullName}}
+            </ui-select-choices>
         </ui-select>
     </div>
 
@@ -358,10 +373,13 @@
     <div class="col-sm-2">
         <ui-select multiple ng-model="vm.selecteduploadBy" theme="bootstrap"
                    ng-disabled="ctrl.disabled" close-on-select="false"
-                   style="width: 200px;" title="Choose a color"> <ui-select-match
-            placeholder="Select upload by...">{{$item.admin_user.fullName}}</ui-select-match>
+                   style="width: 200px;" title="Choose a color">
+            <ui-select-match
+                placeholder="Select upload by...">{{$item.admin_user.fullName}}
+            </ui-select-match>
             <ui-select-choices
-                repeat="admin in vm.uploadBy | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                repeat="admin in vm.uploadBy | filter:$select.search">{{admin.admin_user.fullName}}
+            </ui-select-choices>
         </ui-select>
     </div>
 
@@ -373,7 +391,8 @@
                    close-on-select="false" style="width: 200px;" title="Choose a color">
             <ui-select-match placeholder="Select archived by...">{{$item.admin_user.fullName}}</ui-select-match>
             <ui-select-choices
-                repeat="admin in vm.archivedBy | filter:$select.search">{{admin.admin_user.fullName}}</ui-select-choices>
+                repeat="admin in vm.archivedBy | filter:$select.search">{{admin.admin_user.fullName}}
+            </ui-select-choices>
         </ui-select>
     </div>
 </div>
@@ -825,15 +844,19 @@
 <div class="row">
     <label class="col-md-1 control-label small" for="textinput">Invoiced</label>
     <div class="col-xs-2">
-        <input name="textinput" type="text"
-               id="field_vm.workOrder.invoiced"
-               ng-model="vm.workOrderDTO.workOrder.invoiced"
-               class="form-control input-sm">
-    </div>
+        <!-- <select class="form-control input-sm"
+                 ng-model="vm.workOrderDTO.workOrder.invoiced"
+                 ng-options="invoice.id as invoice.name for invoice in vm.invoiced track by invoice.id">
+             <option value=""></option>
+         </select>-->
 
+        <select class="form-control input-sm" ng-model="vm.workOrderDTO.workOrder.invoiced">
+            <option ng-repeat="x in vm.invoiced" ng-value="{{x.id}}" ng-selected="vm.workOrderDTO.workOrder.invoiced">{{x.name}}</option>
+        </select>
+    </div>
 </div>
 <div class="row">
-    <label class="col-xs-3 control-label small">PO.</label>
+    <label class="col-xs-3 control-label small">P.O.# - Invoice #</label>
 </div>
 <div class="row">
     <div class="col-sm-9">
